fix layout bugs in user_coupon, and update user_page's ui

--- a/cake/app/webroot/css/profile_wobiancao.css
+++ b/cake/app/webroot/css/profile_wobiancao.css
@@ -63,8 +63,8 @@
 }
 
 .coupon-main-rank {
-  padding-top: 17px;
-  color: #7c7c7c;
+  padding-top: 23px;
+  color: #9c9b9b;
   padding-left: 0px;
   padding-right: 0px;
 }
@@ -74,7 +74,7 @@
     height:50px;
     right: 80px;
     left: 0px;
-    padding-top: 15px;
+    padding-top: 7px;
 }
 .coupon-right {
     float:right;
@@ -91,46 +91,65 @@
     padding-right: 0px;
     height:40px;
     float:left;
-    width:40px;
+    width:50px;
 }
 
 .coupon-logo-img{
-    height:100%;
+    height:50px;
     float:left;
-    width:40px;
+    width:50px;
 }
 .coupon-desp {
-    padding-left:5px;
+    padding-top:5px;
+    padding-left:10px;
     padding-right:0px;
     float:left;
     height:100%;
 }
 .coupon-desp-description {
     color: #797979;
-    font-size: 15px;
+    font-size: 13px;
     margin-bottom:0px;
 }
 .coupon-desp-discount {
     color: #fe621d;
-    font-size: 18px;
+    font-size: 17px;
 }
 .coupon-heart {
     height:100%;
     float:right;
     /*width:14px;*/
     /*padding:20px 0px 20px 0px;*/
-    padding:14px 0px;
+    padding:22px 0px;
+    font-size:14px;
+    margin-right:5px;
 }
 .coupon-geted-heart {
     color:red;
 }
 
+.coupon-heart-i-geted{
+    font-size:12px;
+    width:100%;
+    color:#e84b3c;
+}
+.coupon-heart-i{
+    font-size:17px;
+}
 .coupon-line {
 display:block; /*内联对象需加*/
 word-break:keep-all;/*不换行*/
 white-space:nowrap;/*不换行*/
 overflow:hidden;/*隐藏溢出*/
 text-overflow:ellipsis;/*IE溢出显示… 需与overflow:hidden;一起*/
+}
+.coupon-icon {
+    width:30px;
+    height:30px;
+}
+.coupon-icon-arrow {
+    width:15px;
+    height:15px;
 }
 /*
 .wbc-shop-item-cube-container {
@@ -294,27 +313,30 @@ text-overflow:ellipsis;/*IE溢出显示… 需与overflow:hidden;一起*/
   padding:0;
 }
 
+.user-coupon-list-item {
+    padding-left:10px;
+
+}
 .user-coupon-list-shop-name {
-    padding:16px 5px 0 15px;
+    padding:19px 5px 0 5px;
     color:#6b6b6b;
     /*font-size:20px;*/
 }
 
 .user-coupon-list-coupon-desp {
-    padding:16px 0 20px 0;
+    padding:19px 0 0 0;
     /*font-size:20px;*/
     color:#6b6b6b;
 }
 
 .user-coupon-list-shop-logo {
     height:100%;
+    padding-left:0px;
     padding-right:0px;
 }
 
 .user-coupon-list-shop-logo img{
   margin-top:5px;
-  margin-bottom:5px;
-  margin-right:5px;
   height: 50px;
   -webkit-border-radius: 50% !important;
   -moz-border-radius: 50% !important;
@@ -369,8 +391,7 @@ text-overflow:ellipsis;/*IE溢出显示… 需与overflow:hidden;一起*/
 }
 
 .usermain-list-item-icon {
-  padding: 10px;
-  font-size: 30px;
+  padding: 14px 10px 10px 10px;
 }
 .green-follow.btn {
     color: #FFFFFF;
